# Shazam-Clone

./: .gitignore  CMakeLists.txt  README.MD
cpp/src/: main.cpp  spectrogram.cpp  spectrogram.h
docs/: specs.md
prototype/: requirements.txt
prototype/src/: hashing.py  match_test.py  peaks.py  spectrogram.py
